[tool.poetry]
name = "proxy-finder"
version = "0.1.0"
description = ""
authors = ["Félix <digitalmine.france@gmail.com>"]
readme = "README.md"
packages = [{include = "proxy_finder"}]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
